fixin' regressions since namespacing

--- a/public/css/aestheti.css
+++ b/public/css/aestheti.css
@@ -406,7 +406,6 @@ footer a {
 	border-color: #d6e9c6;
 	color: #468847;
 }
-.alert-danger,
 .alert-error {
 	background-color: #f2dede;
 	border-color: #eed3d7;
